--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FirstLab</string>
-    <string name="returnButton">Return</string>
+    <string name="buttonLoginText">Войти</string>
+    <string name="buttonReturnText">Вернуться</string>
 </resources>
